--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,4 @@
-<h1>Home Page</h1>
-<% Volunteer.create(first_name: "Nick") %>
-<%= Volunteer.last.first_name %>
+<h1>We are Team Number 1</h1>
+
 
 
