--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -44,8 +44,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li><a href="doctors.html">Doctors</a></li>
+                  <li><a href="/">Services</a></li>
+                  <li><a href="/enduser">Doctors</a></li>
                   <li class="active"><a href="#">Blog</a></li>
               <li><a href="faq.html">FAQs</a></li>
               <li><a href="gallery.html">Gallery</a></li>
