--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -62,243 +62,21 @@
             <div class="row">
               <div class="welcome">
                 <h1 class="welcome-title">Welcome to Mediliza, the leading volunteer interaction platform.</h1>
-                <p class="welcome-txt">The speed of recovery and quality of life of patients is greatly increased by the interaction they have with volunteers throughout the hospital.  The medical team will gain greater understanding of the patient's daily activites and recovery.  The volunteer team will have a streamlined emthod of recording their interactions with the patients which will contribute to the patients overall wellbeing. 
+                <p class="welcome-txt">The speed of recovery and quality of life of patients is greatly increased by the interactions they have with volunteers throughout the hospital.  The medical team will gain greater understanding of the patient's daily activites and recovery.  The volunteer team will have a streamlined method of recording their interactions with patients which will contribute to the patients overall wellbeing. 
                 </p>
-                <button class="welcome-btn">Read More</button>  
               </div>
             </div>
           </div>
       </section>
 
-
-    <section id= "services">
-      <div class= "container">
-        <div class= "row">
-          <div class= "col-lg-12 col-sm-12 col-xs-12">
-            <h2 class= "headline text-center">
-              Why Choose Us
-            </h2>
-            <p class="sub-headline text-center">
-              Lorem ipsum dolor sit amet, consectetur
-            </p>
-          </div>
-        </div>
-        
-        <div class= "row">
-          <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "hservice">
-              <div class= "service-img">
-                <img class= "img-responsive center-block" src="assets/img/service1.jpg" alt="">
-              </div>
-              <div class= "service-description text-center">
-                <h4 class= "service-heading">Top Qualified Doctors</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae nisi nostrum sunt cum, consequuntur asperiores, impedit voluptate eveniet modi quas omnis.</p>
-                <a href="#" class="rm-btn btn btn-primary">
-                    Read More <i class="fa fa-caret-right"></i></a>
-              </div>
-            </div>
-            <div class="clearfix"></div>
-          </div>
-          <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "hservice">
-              <div class= "service-img">
-                <img class= "img-responsive center-block" src="assets/img/service2.jpg" alt="">
-              </div>
-              <div class= "service-description text-center">
-                <h4 class= "service-heading">Online Q & A</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nulla necessitatibus adipisci consequatur explicabo provident officiis fugit. Nihil dolorem officiis.</p>
-                <a href="#" class="rm-btn btn btn-primary">
-                    Read More <i class="fa fa-caret-right"></i></a>
-              </div>
-            </div>
-            <div class="clearfix"></div>
-          </div>
-          <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "hservice">
-              <div class= "service-img">
-                <img class= "img-responsive center-block" src="assets/img/service3.jpg" alt="">
-              </div>
-              <div class= "service-description text-center">
-                <h4 class= "service-heading">Symptom Check</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsum natus, odio quae! Ratione tempora accusantium explicabo tenetur, porro numquam.</p>
-                <a href="#" class="rm-btn btn btn-primary">
-                    Read More <i class="fa fa-caret-right"></i></a>
-              </div>
-            </div>
-            <div class="clearfix"></div>
-          </div>
-          <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "hservice">
-              <div class= "service-img">
-                <img class= "img-responsive center-block" src="assets/img/service4.jpg" alt="">
-              </div>
-              <div class= "service-description text-center">
-                <h4 class= "service-heading">Competitive Pricing</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsum natus, odio quae! Ratione tempora accusantium explicabo tenetur, porro numquam.</p>
-                <a href="#" class="rm-btn btn btn-primary">
-                    Read More <i class="fa fa-caret-right"></i></a>
-              </div>
-            </div>
-            <div class="clearfix"></div>
-          </div>
-          <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "hservice">
-              <div class= "service-img">
-                <img class= "img-responsive center-block" src="assets/img/service5.jpg" alt="">
-              </div>
-              <div class= "service-description text-center">
-                <h4 class= "service-heading">Medical Counseling</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae nisi nostrum sunt cum, consequuntur asperiores, impedit voluptate eveniet modi quas omnis.</p>
-                <a href="#" class="rm-btn btn btn-primary">
-                    Read More <i class="fa fa-caret-right"></i></a>
-              </div>
-            </div>
-            <div class="clearfix"></div>
-          </div>
-          <div class= "col-lg-4 col-sm-6 col-xs-12">
-            <div class= "hservice">
-              <div class= "service-img">
-                <img class= "img-responsive center-block" src="assets/img/service6.jpg" alt="">
-              </div>
-              <div class= "service-description text-center">
-                <h4 class= "service-heading">Caring Staff</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nulla necessitatibus adipisci consequatur explicabo provident officiis fugit. Nihil dolorem officiis.</p>
-                <a href="#" class="rm-btn btn btn-primary">
-                    Read More <i class="fa fa-caret-right"></i></a>
-              </div>
-            </div>
-            <div class="clearfix"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-
-
-
-
-    <section id= "testimonial" class="text-center">
-      <div class="testimonial-wrapper">
+      <section class= "second-box">            
         <div class="container">
-            <div class="row client-content text-center">
-              <div class="col-md-8">
-                <div class="row">
-                <h1>Testimonial</h1>
-              </div>
-              <div class="row">
-                <div class="sub-headline">
-                  <p>What Our Patients Say About Us</p>
-                </div>
-              </div>
-                
-              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      
-
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                  <div class="item active">
-                      <div id="client-speech">
-                    <div class="item">
-                      <div class="row">
-                        <div class="col-md-12">
-                          <i class="fa fa-quote-left"></i>
-                        </div>
-                        <div class="col-md-8 col-md-offset-2">
-                          <p class="client-comment text-center">
-                            When you form a team, why do you try to form a team? Because teamwork builds trust and trust builds speed.
-                          </p>
-                        </div>
-                        <div class="col-md-12">
-                          <i class="fa fa-quote-right"></i>
-                        </div>
-                        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-                          <img class="img-circle img-responsive center-block" src="assets/img/client3.jpg" alt="Image">
-                        </div>  
-                      </div>
-                      <div class= "row text-center">
-                        <p class="client-name text-center">Julia Doe</p>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                <div class="item">
-                  <div id="client-speech">
-                    <div class="item">
-                      <div class="row">
-                        <div class="col-md-12">
-                          <i class="fa fa-quote-left"></i>
-                        </div>
-                        <div class="col-md-8 col-md-offset-2">
-                          <p class="client-comment text-center">
-                            When you form a team, why do you try to form a team? Because teamwork builds trust and trust builds speed.
-                          </p>
-                        </div>
-                        <div class="col-md-12">
-                          <i class="fa fa-quote-right"></i>
-                        </div>
-                        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-                          <img class="img-circle img-responsive center-block" src="assets/img/client1.jpg" alt="Image">
-                        </div>  
-                      </div>
-                      <div class= "row text-center">
-                        <p class="client-name text-center">John Doe</p>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                  <div class="item">
-                      <div id="client-speech">
-                    <div class="item">
-                      <div class="row">
-                        <div class="col-md-12">
-                          <i class="fa fa-quote-left"></i>
-                        </div>
-                        <div class="col-md-8 col-md-offset-2">
-                          <p class="client-comment text-center">
-                            When you form a team, why do you try to form a team? Because teamwork builds trust and trust builds speed.
-                          </p>
-                        </div>
-                        <div class="col-md-12">
-                          <i class="fa fa-quote-right"></i>
-                        </div>
-                        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
-                          <img class="img-circle img-responsive center-block" src="assets/img/client4.jpg" alt="Image">
-                        </div>  
-                      </div>
-                      <div class= "row text-center">
-                        <p class="client-name text-center">Jane Doe</p>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                </div>
-
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <i class="fa fa-angle-left fa-3x"></i>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <i class="fa fa-angle-right fa-3x"></i>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-              </div>
-              <div class="col-md-4">
-                <div class= "appointment">
-              
-                          <div class="header text-center">
-                              <h2>Make an Appointment</h2>
-                              <a href="#" class="number">
-                                <i class="fa fa-phone fa-fw"></i>
-                    1-800-123-4567
-                              </a>
-                              <span class="or">OR</span>
-                          </div>
+          <span class="or">Login</span>
+        </div>
 
                 <!-- form of appointment -->
-                <div class="row">
-                  <form method="post" action="#">
+        <div class="row">
+          <form method="post" action="#">
                     <div class= "form">
                       <div class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                         <input class="form-control" type="text" placeholder="Full Name *" required>
@@ -325,7 +103,7 @@
                       <input class="btn btn-primary send" type="submit" value="Send">
                     </div>
                   </form>
-                </div>
+        </div>
                 <!-- end of form -->
               </div><!-- end of appointment-->
               </div>
