--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -44,12 +44,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="/">Services</a></li>
+                  <li><a href="/">Patients</a></li>
                   <li><a href="/enduser">Doctors</a></li>
-                  <li class="active"><a href="#">Blog</a></li>
-              <li><a href="faq.html">FAQs</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="faq.html">FAQs</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -71,243 +69,34 @@
       </div>
     </section>
 
-    <section class= "blog-content">
-      <div class= "container">
-        <div class= "row">
-          <main class="blog1col col-md-9">
-              <div class="archive">           
-              <article class="row">
-                
-                <div class="col-md-4 col-sm-4">
-                  <img src="assets/img/blog1.jpg" class="img-responsive center-block img-padder" alt="Medical Theme Health and Care">
-                </div>
+    <%@patients.each do |item|%>
+      <section class= "blog-content">
+        <div class= "container">
+          <div class= "row">
+            <main class="blog1col col-md-9">
+                <div class="archive">           
+                <article class="row">
 
-                <div class="col-md-8 col-sm-8">
-                  <h4>
-                    <a href="#">
-                      Use the images in the posts
-                    </a>
-                  </h4>
-                  <ul class="list-inline info">
-                    <li><i class="fa fa-user-md"></i> Marco Nardi</li>
-                    <li><i class="fa fa-calendar"></i> March 17, 2014</li>
-                    <li><i class="fa fa-tag"></i> <a href="#">News</a></li>
-                    <li><i class="fa fa-comment"></i> One Comment</li>
-                  </ul>
-                
-                  <p>
-                    Quisque Eget Odio Ac Lectus Vestibulum Faucibus Eget In Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus. Hendrerit arcu sed erat molestie vehicula. Sed auctor…  
-                    <a href="#" class="service-rm-btn btn btn-primary">
-                      Continue reading <i class="fa fa-caret-right"></i></a>
-                  </p>
-                  
-                    
-                </div>
-              </article>
-               
-              <article class="row">
-
-                <div class="col-md-4 col-sm-4">
-                  <img src="assets/img/blog4.jpg" class="img-responsive center-block img-padder" alt="Medical Theme Health and Care">
-                </div>
-
-                <div class="col-md-8 col-sm-8">
-                  <h4>
-                    <a href="#">Food and shopping in medical real world and its consequence</a>
-                  </h4>
-                  <ul class="list-inline info">
-                    <li><i class="fa fa-user-md"></i> Marco Nardi</li>
-                    <li><i class="fa fa-calendar"></i> May 19, 2013</li>
-                    <li><i class="fa fa-tag"></i> <a href="#">Lesti</a></li>
-                    <li><i class="fa fa-comment"></i> 5 Comments</li>
-                  </ul>
-                  <p>
-                    Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus…  
-                    <a href="#" class="service-rm-btn btn btn-primary">
-                      Continue reading <i class="fa fa-caret-right"></i></a>
-                  </p>
-                </div>
-              </article>
-                
-              <article class="row">
-
-                <div class="col-md-4 col-sm-4">
-                  <img src="assets/img/blog8.jpg" class="img-responsive center-block img-padder" alt="Medical Theme Health and Care">
-                </div>
-
-                <div class="col-md-8 col-sm-8">
-                  <h4>
-                    <a href="#">Demo post 1</a>
-                  </h4>
-                  <ul class="list-inline info">
-                    <li><i class="fa fa-user-md"></i> Marco Nardi</li>
-                    <li><i class="fa fa-calendar"></i> October 20, 2011</li>
-                    <li><i class="fa fa-tag"></i> <a href="#">Data</a></li>
-                    <li><i class="fa fa-comment"></i> 2 Comments</li>
-                  </ul>
-                  <p>
-                    Header Level 3 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam tincidunt mauris eu risus. Header Level 2 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam tincidunt…  
-                    <a href="#" class="service-rm-btn btn btn-primary">
-                      Continue reading <i class="fa fa-caret-right"></i></a>
-                  </p>
-                </div>
-              </article>
+                  <div class="col-md-8 col-sm-8">
+                    <h4>
+                      <a href="#">
+                        Use the images in the posts
+                      </a>
+                    </h4>
+                    <ul class="list-inline info">
+                      <li><i class="fa fa-user-md"></i><%="#{item.first_name}, #{item.last_name}"%></li>
+                      <li><i class="fa fa-calendar"></i> March 17, 2014</li>
+                      <li><i class="fa fa-tag"></i> <a href="#">News</a></li>
+                      <li><i class="fa fa-comment"></i>Comment</li>
+                    </ul>
+                  </div>
+                </article>
                    
-          </main>
-
-
-          <aside class="col-md-3 ">
-            <div class="widget widget_categories" id="categories-3">
-              <h4><span>Categories</span></h4>
-              <ul>
-                <li class="cat-item cat-item-4">
-                  <a href="#" title="View all posts filed under Data">Data</a>
-                </li>
-
-                <li class="cat-item cat-item-3">
-                  <a href="#" title="View all posts filed under Lesti">Lesti</a>
-                </li>
-
-                <li class="cat-item cat-item-5">
-                  <a href="#" title="View all posts filed under Nean condimentum">Nean condimentum</a>
-                </li>
-
-                <li class="cat-item cat-item-1">
-                  <a href="#" title="View all posts filed under News">News</a>
-                </li>
-
-                <li class="cat-item cat-item-21">
-                  <a href="#" title="View all posts filed under Slide">Slide</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="widget widget_iw_last_posts" id="iw_last_posts-3">
-              <h4><span>Last posts whit image</span></h4>   
-              <div class="row">
-                <div class="col-md-4 col-xs-3">
-                  <a href="#">
-                    <img src="assets/img/blog1_min.jpg" class="img-responsive h5 wp-post-image" alt="Medical Theme Health and Care">
-                  </a>
-                </div>
-              
-                <div class="col-md-8 col-xs-9">
-                  <h5>
-                    <a href="#">Use the images in the posts</a>
-                  </h5>
-                  <p>
-                    <time datetime="2014-03-17">March 17, 2014</time>
-                    <br>
-                  </p>
-                </div>
-              </div><!-- /.row -->
-
-              <hr>
-                        
-              <div class="row">
-                <div class="col-md-4 col-xs-3">
-                  <a href="#">
-                    <img src="assets/img/blog2_min.jpg" class="img-responsive h5 wp-post-image" alt="Medical Theme Health and Care">
-                  </a>
-                </div>
-              
-                <div class="col-md-8 col-xs-9">
-                  <h5>
-                    <a href="#">We’r doctors!</a>
-                  </h5>
-                  <p>
-                    <time datetime="2013-11-20">November 20, 2013</time><br>
-                  </p>
-                </div>
-              </div><!-- /.row -->
-              <hr>
-                        
-              <div class="row">
-                <div class="col-md-4 col-xs-3">
-                  <a href="#">
-                    <img src="assets/img/blog3_min.jpg" class="img-responsive h5 wp-post-image" alt="Medical Theme Health and Care">
-                  </a>
-                </div>
-              
-                <div class="col-md-8 col-xs-9">
-                  <h5>
-                    <a href="#">Breathe mountain air is good for your health?
-                    </a>
-                  </h5>
-                  <p>
-                    <time datetime="2013-07-17">July 17, 2013</time><br>
-                  </p>
-                </div>
-              </div><!-- /.row -->
-              <hr>
-            
-                        
-              <div class="row">
-                <div class="col-md-4 col-xs-3">
-                  <a href="#">
-                    <img src="assets/img/blog4_min.jpg" class="img-responsive h5 wp-post-image" alt="Medical Theme Health and Care">
-                  </a>
-                </div>
-              
-                <div class="col-md-8 col-xs-9">
-                  <h5>
-                    <a href="#">Food and shopping in medical real world and its consequence</a>
-                  </h5>
-                  <p>
-                    <time datetime="2013-05-19">May 19, 2013</time><br>
-                  </p>
-                </div>
-              </div><!-- /.row -->
-              <hr>
-                      
-              <div class="row">
-                <div class="col-md-4 col-xs-3">
-                  <a href="#">
-                    <img src="assets/img/blog5_min.jpg" class="img-responsive h5 wp-post-image" alt="Medical Theme Health and Care">
-                  </a>
-                </div>
-              
-                <div class="col-md-8 col-xs-9">
-                  <h5>
-                    <a href="#">Demo post 11</a>
-                  </h5>
-                  <p>
-                    <time datetime="2013-05-17">May 17, 2013</time><br>
-                  </p>
-                </div>
-              </div><!-- /.row -->
-              <hr>
-                        
-              </div>
-              <div class="widget widget_text" id="text-3">
-                <h4>
-                  <span>Text widget</span>
-                </h4>
-                <div class="textwidget">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
-            </div>
-            <div class="widget widget_tag_cloud" id="tag_cloud-3">
-              <h4><span>Tags</span></h4>
-              <div class="tagcloud">
-                <a href="#" title="2 topics" style="font-size: 16.4pt;">care</a>
-                <a href="#" title="2 topics" style="font-size: 16.4pt;">data</a>
-                <a href="#" title="2 topics" style="font-size: 16.4pt;">demo</a>
-                <a href="#" title="2 topics" style="font-size: 16.4pt;">healthcare</a>
-                <a href="#" title="1 topic" style="font-size: 8pt;">heart</a>
-                <a href="#" title="1 topic" style="font-size: 8pt;">insert</a>
-                <a href="#" title="3 topics" style="font-size: 22pt;">medicals</a>
-                <a href="#" title="2 topics" style="font-size: 16.4pt;">post</a>
-                <a href="#" title="2 topics" style="font-size: 16.4pt;">premium</a>
-                <a href="#" title="1 topic" style="font-size: 8pt;">theme</a>
-                <a href="#" title="3 topics" style="font-size: 22pt;">wordpress</a>
-              </div>
-            </div>
-          </aside>
-        </div>  <!-- end of row -->
-      </div>  <!-- end of container -->
-    </section>
-
+            </main>
+          </div>  <!-- end of row -->
+        </div>  <!-- end of container -->
+      </section>
+    <%end%>  
 
     <section id="footer">
       <div class="container">
