--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -73,25 +73,14 @@
       <section class= "blog-content">
         <div class= "container">
           <div class= "row">
-            <main class="blog1col col-md-9">
-                <div class="archive">           
-                <article class="row">
-
+            <main class="blog1col col-md-9">    
                   <div class="col-md-8 col-sm-8">
-                    <h4>
-                      <a href="#">
-                        Use the images in the posts
-                      </a>
-                    </h4>
                     <ul class="list-inline info">
-                      <li><i class="fa fa-user-md"></i><%="#{item.first_name}, #{item.last_name}"%></li>
-                      <li><i class="fa fa-calendar"></i> March 17, 2014</li>
-                      <li><i class="fa fa-tag"></i> <a href="#">News</a></li>
-                      <li><i class="fa fa-comment"></i>Comment</li>
+                      <li><i class="fa fa-user-md"></i> <a href="/patient/list"><%="#{item.first_name}, #{item.last_name}"%></a></li>
+                      <li><i class="fa fa-calendar"></i> <%="Admitted: #{item.created_at.strftime('%x')}"%></li>
+                      <li><i class="fa fa-comment"></i><%="XXXXXXXXXXXX place holder for observations from interactoins table"%></li>
                     </ul>
                   </div>
-                </article>
-                   
             </main>
           </div>  <!-- end of row -->
         </div>  <!-- end of container -->
