--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="/">Patients</a></li>
+                  <li><a href="/volunteer_home_page">Volunteers</a></li>
                   <li><a href="/enduser">Doctors</a></li>
                   <li><a href="faq.html">FAQs</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
@@ -92,7 +92,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="copy-right-text text-center">
-              &copy; Copyright 2014, Your Website Link. Theme by <a href="https://themewagon.com/">ThemeWagon</a>
+              &copy; Theme by <a href="https://themewagon.com/">ThemeWagon</a>
             </div>
           </div>
         </div>
