Amended the navbar and the index page

--- a/app/views/enduser2.erb
+++ b/app/views/enduser2.erb
@@ -41,13 +41,11 @@
             </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="/volunteer_home_page">Volunteers</a></li>
                   <li><a href="/enduser">Doctors</a></li>
-                  <li><a href="faq.html">FAQs</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -74,13 +72,15 @@
         <div class= "container">
           <div class= "row">
             <main class="blog1col col-md-9">    
-                  <div class="col-md-8 col-sm-8">
-                    <ul class="list-inline info">
-                      <li><i class="fa fa-user-md"></i> <a href="/patient/list"><%="#{item.first_name}, #{item.last_name}"%></a></li>
-                      <li><i class="fa fa-calendar"></i> <%="Admitted: #{item.created_at.strftime('%x')}"%></li>
-                      <li><i class="fa fa-comment"></i><%=""%></li>
-                    </ul>
-                  </div>
+              <div class="col-md-8 col-sm-8">
+                <ul class="list-inline info">
+                  <li><i class="fa fa-user-md"></i> <a href="/enduser2/'#{item.patient_id}'"><%="#{item.first_name}, #{item.last_name}"%></a></li>
+                  <li><i class="fa fa-calendar"></i> <%="Admitted: #{item.created_at.strftime('%x')}"%></li>
+                  <li><i class="fa fa-comment"></i><%="#{item.interactions[0].observation}"%></li>
+                </ul>
+                <li><i class="fa fa-comment"></i><%="#{item.interactions[1].observation}"%></li>
+                <li><i class="fa fa-comment"></i><%="#{item.interactions[2].observation}"%></li>
+              </div>
             </main>
           </div>  <!-- end of row -->
         </div>  <!-- end of container -->
