--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -41,11 +41,14 @@
             </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="/volunteer_home_page">Volunteers</a></li>
-                  <li><a href="/enduser">Doctors</a></li>
+                  <li><a href="services.html">Services</a></li>
+                  <li class="active"><a href="#">Volunteer</a></li>
+              <li><a href="faq.html">FAQs</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -192,6 +195,7 @@
                    <a href="#" class="btn btn-primary">Save Comments</a>
                 </div>   
              
+<!-- 
 
     <section id="footer">
       <div class="container">
@@ -222,7 +226,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="copy-right-text text-center">
-              &copy; Theme by <a href="https://themewagon.com/">ThemeWagon</a>
+              &copy; Copyright 2014, Your Website Link. Theme by <a href="https://themewagon.com/">ThemeWagon</a>
             </div>
           </div>
         </div>
