clean up commit

--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -76,9 +76,9 @@
             <main class="blog1col col-md-9">    
                   <div class="col-md-8 col-sm-8">
                     <ul class="list-inline info">
-                      <li><i class="fa fa-user-md"></i> <a href="/enduser2/'#{item.patient_id}'"><%="#{item.first_name}, #{item.last_name}"%></a></li>
+                      <li><i class="fa fa-user-md"></i> <a href="/patient/list"><%="#{item.first_name}, #{item.last_name}"%></a></li>
                       <li><i class="fa fa-calendar"></i> <%="Admitted: #{item.created_at.strftime('%x')}"%></li>
- 
+                      <li><i class="fa fa-comment"></i><%="XXXXXXXXXXXX place holder for observations from interactoins table"%></li>
                     </ul>
                   </div>
             </main>
