--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -43,12 +43,13 @@
               </div>
                 <div class="row text-center service"><a href="/volunteer_home_page">
                   <div class="service-icon text-center" >
+                    <h3 class="text-center">Enter</h3>
                     <i class="fa fa-stethoscope fa-5x"></i>
                   </div>
-                </div>
+                </a></div>
                 <div class="row text-center">
                   <div class="about-service">
-                    <h3 class="text-center">Enter<a href="/volunteer_home_page"></h3>
+
                   </div>
                 </div>  
              
