Centering homepage button

--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -62,7 +62,7 @@
                           <div type="submit" class="service-icon text-center" >
                             <i class="fa fa-stethoscope fa-5x"></i>
                           </div>
-                        </button><p>
+                        </button></p>
                       </form>
                   </div>
                 </div>  
