--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -41,16 +41,21 @@
                 <p class="welcome-txt">The speed of recovery and quality of life of patients is greatly increased by the interactions they have with volunteers throughout the hospital.  The medical team will gain greater understanding of the patient's daily activites and recovery.  The volunteer team will have a streamlined method of recording their interactions with patients which will contribute to the patients overall wellbeing. 
                 </p>
               </div>
-                <div class="row text-center service"><a href="/volunteer_home_page">
-                  <div class="service-icon text-center" >
-                    <i class="fa fa-stethoscope fa-5x"></i>
-                  </div>
-                </div>
-                <div class="row text-center">
-                  <div class="about-service">
-                    <h3 class="text-center">Enter<a href="/volunteer_home_page"></h3>
-                  </div>
-                </div>  
+              <button style="
+                                            background-color: #67B2C1; 
+                                            border: none;border: none;
+                                            padding-top: 0;
+                                            padding-left: 0;  
+                                            border-radius: 75px;
+                                            height: 150px;
+                                            width: 150px;"
+              ><div class="container">
+              <div class="container-fluid row text-center service"><p><a href="/volunteer_home_page"> 
+                          <div type="submit" class="row-fluid service-icon text-center" >
+                            <i class="fa fa-stethoscope fa-5x"></i>
+                          </div>
+                       </a></p></div>
+              </div></button>
              
             </div>
           </div>
