--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -41,18 +41,18 @@
                 <p class="welcome-txt">The speed of recovery and quality of life of patients is greatly increased by the interactions they have with volunteers throughout the hospital.  The medical team will gain greater understanding of the patient's daily activites and recovery.  The volunteer team will have a streamlined method of recording their interactions with patients which will contribute to the patients overall wellbeing. 
                 </p>
               </div>
-                <div class="row text-center service"><a href="/volunteer_home_page">
+                <div class= "container-fluid">
+                <div class="row text-center">
                   <div class="service-icon text-center" >
-                    <h3 class="text-center">Enter</h3>
-                    <i class="fa fa-stethoscope fa-5x"></i>
+                    <a href="/volunteer_home_page"><i class="fa fa-stethoscope fa-5x"></i></a>
                   </div>
-                </a></div>
+                </div>
                 <div class="row text-center">
                   <div class="about-service">
 
                   </div>
                 </div>  
-             
+             </div>
             </div>
           </div>
       </section>
