--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -10,7 +10,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand logo" href="#">
+                <a class="navbar-brand logo" href="/">
                   <span><i class="fa fa-stethoscope"></i></span>
                   Mediliza
                 </a>
@@ -19,10 +19,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                  <li><a href="/">Home</a></li>
-                  <li><a href="/volunteer_home_page">Volunteers</a></li>
-                  <li><a href="/enduser">Nurses</a></li>
-                </ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/volunteer_home_page">Volunteers</a></li>
+                <li><a href="/enduser">Nurses</a></li>
+                <li><a href="/volunteer_patient_page/search/?">Family</a></li>
+              </ul>
             </div><!-- navbar-collapse -->
         </div><!-- container-fluid -->
       </nav>
@@ -62,7 +63,7 @@
                           <div type="submit" class="service-icon text-center" >
                             <i class="fa fa-stethoscope fa-5x"></i>
                           </div>
-                        </button><p>
+                        </button></p>
                       </form>
                   </div>
                 </div>  
