--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -3,23 +3,9 @@
 <html>
 
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="img/season-change.jpg" type="image/x-icon">
+    
     <title>Mediliza Homepage</title>
 
-      <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-      <!-- <link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700' rel='stylesheet' type='text/css'> -->
-      <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,500,600' rel='stylesheet' type='text/css'>
-      
-
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   </head>
 
   <body>
@@ -86,62 +72,55 @@
 
        <!--  <A href="edit.html" >Logout</A> -->
        <br>
-        <p class=" text-info">Next available visit time: 01,2016,03:00 pm </p>
+        <p class=" text-info">Next available visit time: <%="#{Date.today}" %> </p>
       </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
    
    
           <div class="panel panel-info">
             <div class="panel-heading">
-           <h3 class="panel-title"> <%= "#{@patients.first_name}, #{@patients.last_name} "%></h3>
+              <h3 class="panel-title"><%= "#{@patients.first_name} #{@patients.last_name} "%></h3>
             </div>
             <div class="panel-body">
               <div class="row">
-               <!--  <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div> -->
+                <div class="col-md-3 col-lg-3 " align="center"> <!-- <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div> -->
                 
                 <!--<div class="col-xs-10 col-sm-10 hidden-md hidden-lg"> <br>
-                  <dl>
-                    <dt>DEPARTMENT:</dt>
-                    <dd>Administrator</dd>
-                    <dt>HIRE DATE</dt>
-                    <dd>11/12/2013</dd>
-                    <dt>DATE OF BIRTH</dt>
-                       <dd>11/12/2013</dd>
-                    <dt>GENDER</dt>
-                    <dd>Male</dd>
-                  </dl>
+                  
                 </div>-->
                 <div class=" col-md-9 col-lg-9 "> 
                   <table class="table table-user-information">
                     <tbody>
                       <tr>
-                        <td>Unit:</td>
-                        <td>@patients.id</td>
+                        <td>Patient ID</td>
+                        <td><%= "#{@patients.id}"%></td>
                       </tr>
                       <tr>
                         <td>Likes to be Known as:</td>
-                        <td> Bruce Lee</td>
+                        <td> <%= "#{@patients.nick_name}"%></td>
                       </tr>
                       <tr>
                         <td>Language Requirements</td>
-                        <td>@patients.language</td>
-                      </tr>        
-                        
-                      <tr>
+                        <td><%="#{@patients.language}" %></td>
+                      </tr>
+                   
+                        <!--  <tr> -->
+                             <tr>
                         <td>Special Needs</td>
-                        <td>@patients.preference.likes</td>
+                        <td></td>
                       </tr>
                         <tr>
                         <td></td>
-                        <td>@patients.mobility_type</td>
+                        <td><%="#{@patients.mobility_type}" %></td>
                       </tr>
                       <tr>
                         <td></td>
-                        <td> @patients.beverage_type</td>
+                        <td> <%="#{@patients.beverage_type}" %></td>
                       </tr>
-                      <tr>
                         <td>Emergency Contact</td>
-                        <td>@patients.staff.first_name</td>   
+                        <td><%="#{@patients.staff.first_name} #{@patients.staff.last_name}" %>
+                        </td>
+                           
                       </tr>
                      
                     </tbody>
@@ -154,7 +133,8 @@
             </div>
                  <div class="panel-footer">
                         <a data-original-title="Broadcast Message"></a>
-                        <span class="pull-right"></span>
+                        <span class="pull-right">
+                        </span>
                     </div>
             
           </div>
@@ -163,38 +143,36 @@
     </div>
 
             <div class="widget widget_categories" id="categories-3">
-            <h4><strong> Observation and comments after patient visit </strong></h4>
-                <textarea class="form-control" style = "border: solid blue; width: 500px; padding: 60px"></textarea> 
+            <form action = " /volunteer_patient_page" method = "post" > 
+              <h4><strong> Observation and comments after patient visit </strong></h4>
+                
+                  <textarea type= "text" name = "observation" rows = "6" cols = "50" >  </textarea>
 
-
-            </div>
+               </div>
 
                    <div class="checkbox">
                   <label>
-                    <input type="checkbox" value="">
+                    <input type="checkbox" checked = "checked" name = "beverage" />
                     Did Patient drink water during visit? 
                   </label>
                   </br>
                    <label>
-                    <input type="checkbox" value="">
-                    was patient able to talk during visit? 
-                  </label>
-                  </br>
-                   <label>
-                    <input type="checkbox" value="">
+                   <!--  <input type="checkbox" value= <"true ">
                     Was patient able to walk during visit? 
-                  </label>
+                  </label> -->
                 </div>
-                
+                <input type= "hidden" value=<%= @patients.id %> name = "id">
                 <div>
                   </br>
                   </br> 
-                   <a href="#" class="btn btn-primary">Save Comments</a>
-                </div>   
+                   <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
+                   <input type= "submit" name= "submit" > 
+                </div> 
+            </form>  
              
+<!-- 
 
-
-    <!-- <section id="footer">
+    <section id="footer">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
@@ -227,8 +205,8 @@
             </div>
           </div>
         </div>
-      </div> -->
-    </section>
+      </div>
+    </section> -->
 
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/wow.min.js"></script>
