Changed vol home page to use singular var name.

--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -63,7 +63,7 @@
           </div>
           <div class="row">
             <div class="sub-headline">
-              <p style = " text-align: left;">Hi <%="#{@volunteers.first.first_name}, #{@volunteers.first.last_name} "%></p> 
+              <p style = " text-align: left;">Hi <%="#{@volunteer.first_name}, #{@volunteer.last_name} "%></p> 
             </div>
           </div>  
         </div>
