--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -94,7 +94,7 @@
                  </ul>
                 </div>  
                 </br>
-              <h4><span>Nurse recommendation of patient to be visited </span></h4>
+              <h4><span>Most recently visited patients: </span></h4>
               <h4><span> On <%= "#{Date.today}" %></span></h4>
               <ul style =  "width: 400px;">
                 <li class="cat-item cat-item-4">
