Centered welcome msg.

--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -59,13 +59,8 @@
       <div class="blog-wrapper"  style =  "height: 220px; "> <!-- height of class wrapper changed to 220px from the deafult -->
         <div class="container">
           <div class= "row">  
-            <h4 class="headline", style="font-size: 30px; word-spacing: 5px; margin-top:40px;margin-bottom:10px ">Organizing Volunteers for those most in need </h4>
+            <h2 class="headline" style="padding-top: 100px;">Welcome <%="#{@volunteer.first_name}"%></h2>
           </div>
-          <div class="row">
-            <div class="sub-headline">
-              <p style = " text-align: left;">Hi <%="#{@volunteer.first_name}, #{@volunteer.last_name} "%></p> 
-            </div>
-          </div>  
         </div>
       </div>
     </section>
