Changed title for patient page.

--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -39,13 +39,8 @@
       <div class="blog-wrapper"  style =  "height: 220px; "> <!-- height of class wrapper changed to 220px from the deafult -->
         <div class="container">
           <div class= "row">  
-            <h4 class="headline", style="font-size: 30px; word-spacing: 5px; margin-top:40px;margin-bottom:10px ">Organizing Volunteers for those most in need </h4>
+            <h2 class="headline text-center" style="padding-top: 100px;">Patient Profile</h2>
           </div>
-          <div class="row">
-            <div class="sub-headline">
-              <p style = " text-align: left;"> Hi <%="#{@volunteers.first.first_name} #{@volunteers.first.last_name} "%></p> 
-            </div>
-          </div>  
         </div>
       </div>
     </section>
@@ -54,8 +49,6 @@
       <div class= "container">
         <div class= "row">
           <main class="text-center">
-        
-              <h3>Patient Profile</h3>
               <h3>Next available visit time: <%="#{Date.today}" %> </h3>
             <div class="panel panel-info" style="border: none;">
               <div class="panel-heading">
